# mcptoolkit

./: .gitignore  API.md  BLOG_TOPICS.md  CHANGELOG.md  CMakeLists.txt  JSON_VULNERABILITIES.md  Makefile  README.md  SECURITY_TEST_COVERAGE.md  STYLE_COMPARISON.md  TESTING.md  TEST_RESULTS.md  TestMcp.sln  run_tests.sh
.claude/: settings.json
TestMcp/: TestMcp.cpp  TestMcp.vcxproj
examples/: AUDIT_LOG_FORMATTER.md  audit-log-formatter.cpp
mcptoolkit/: dllmain.cpp  framework.h  mcptoolkit.vcxproj
mcptoolkit/include/: mcp_adapter.h
mcptoolkit/include/json/: json_builder.h  json_msg.h  json_parser.h
mcptoolkit/src/: mcp_adapter.cpp
mcptoolkit/src/json/: json_builder.cpp  json_msg.cpp  json_parser.cpp
scripts/post02/: PYTHON_BENCHMARKS_README.md  benchmark_python_json.py  compare_json_libraries.py  measure_gc_behavior.py
